04-k8s-proxy-traefik-ingress/proxyapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxyapi
  namespace: reliability-pp
  labels:
    name: proxyapi
    team: "sre"
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    service: proxy
  sessionAffinity: None
